# testmate_env_test_repo

./: CMakeLists.txt  CMakePresets.json  README.MD  dll.cpp  dll.h  test.cpp
.cache/clangd/index/: dll.cpp.52B2BE31D5DA8303.idx  dll.h.2A05862C6384F9FD.idx  test.cpp.4D035A4921010764.idx
